==> arendst/Tasmota/lib/libesp32_div/M5EPD47/src/M5EPD_Driver.cpp <==
#include "M5EPD_Driver.h"
#define CHECK(x)                \
    __epdret__ = x;             \
    if (__epdret__ != M5EPD_OK) \
    {                           \
        return __epdret__;      \
    }

m5epd_err_t M5EPD_Driver::begin(int8_t sck, int8_t mosi, int8_t miso, int8_t cs, int8_t busy, int8_t rst)
{
    _epd_spi = &SPI;
    _epd_spi->begin(sck, miso, mosi, -1);
    _pin_cs = cs;
    _pin_busy = busy;
    _pin_sck = sck;
    _pin_mosi = mosi;
    _pin_miso = miso;
    _pin_rst = rst;
    if (_pin_rst != -1) {
        pinMode(_pin_rst, OUTPUT);
        ResetDriver();
    }
    digitalWrite(_pin_cs, HIGH);
    pinMode(_pin_cs, OUTPUT);
    pinMode(_pin_busy, INPUT);

    StartSPI(10000000);

    // CHECK(GetSysInfo());
    _tar_memaddr = 0x001236E0;
    _dev_memaddr_l = 0x36E0;
    _dev_memaddr_h = 0x0012;
    CHECK(WriteCommand(IT8951_TCON_SYS_RUN));
    CHECK(WriteReg(IT8951_I80CPCR, 0x0001)); //enable pack write

    //set vcom to -2.30v
    CHECK(WriteCommand(0x0039)); //tcon vcom set command
    CHECK(WriteWord(0x0001));
    CHECK(WriteWord(2300));

    EndSPI();

    delay(1000);

    log_d("Init SUCCESS.");

    return M5EPD_OK;
}

m5epd_err_t M5EPD_Driver::Clear(bool init)
{
    _endian_type = IT8951_LDIMG_L_ENDIAN;
    _pix_bpp = IT8951_4BPP;

    StartSPI();

    CHECK(SetTargetMemoryAddr(_tar_memaddr));
    if(_direction)
    {
        CHECK(SetArea(0, 0, M5EPD_PANEL_W, M5EPD_PANEL_H));
    }
    else
    {
        CHECK(SetArea(0, 0, M5EPD_PANEL_H, M5EPD_PANEL_W));
    }
    if(_is_reverse)
    {
        for (uint32_t x = 0; x < ((M5EPD_PANEL_W * M5EPD_PANEL_H) >> 2); x++)
        {
            digitalWrite(_pin_cs, 0);
            _epd_spi->write32(0x00000000);
            digitalWrite(_pin_cs, 1);
        }
    }
    else
    {
        for (uint32_t x = 0; x < ((M5EPD_PANEL_W * M5EPD_PANEL_H) >> 2); x++)
        {
            digitalWrite(_pin_cs, 0);
            _epd_spi->write32(0x0000FFFF);
            digitalWrite(_pin_cs, 1);
        }
    }

    CHECK(WriteCommand(IT8951_TCON_LD_IMG_END));

    EndSPI();

    if(init)
    {
        CHECK(UpdateFull(UPDATE_MODE_INIT));
    }

    return M5EPD_OK;
}

m5epd_err_t M5EPD_Driver::WritePartGram4bpp(uint16_t x, uint16_t y, uint16_t w, uint16_t h, const uint8_t *gram)
{
    _endian_type = IT8951_LDIMG_B_ENDIAN;
    _pix_bpp = IT8951_4BPP;

    // rounded up to be multiple of 4
    if(_direction)
    {
        x = (x + 3) & 0xFFFC;
    }
    else
    {
        x = (x + 3) & 0xFFFC;
        y = (y + 3) & 0xFFFC;
    }

    if(w & 0x03)
    {
        log_e("Gram width %d not a multiple of 4.", w);
        return M5EPD_NOTMULTIPLE4;
    }

    if(_direction)
    {
        if(x > M5EPD_PANEL_W || y > M5EPD_PANEL_H)
        {
            log_d("Pos (%d, %d) out of bounds.", x, y);
            return M5EPD_OUTOFBOUNDS;
        }
    }
    else
    {
        if(x > M5EPD_PANEL_H || y > M5EPD_PANEL_W)
        {
            log_d("Pos (%d, %d) out of bounds.", x, y);
            return M5EPD_OUTOFBOUNDS;
        }
    }


    uint32_t pos = 0;
    // uint64_t length = (w / 2) * h;

    StartSPI();

    uint16_t word = 0;
    CHECK(SetTargetMemoryAddr(_tar_memaddr));
    CHECK(SetArea(x, y, w, h));
    if(_is_reverse)
    {
        for (uint32_t x = 0; x < ((w * h) >> 2); x++)
        {
            word = gram[pos] << 8 | gram[pos + 1];

            digitalWrite(_pin_cs, 0);
            _epd_spi->write32(word);
            digitalWrite(_pin_cs, 1);
            pos += 2;
        }
    }
    else
    {
        for (uint32_t x = 0; x < ((w * h) >> 2); x++)
        {
            word = gram[pos] << 8 | gram[pos + 1];
            word = 0xFFFF - word;

            digitalWrite(_pin_cs, 0);
            _epd_spi->write32(word);
            digitalWrite(_pin_cs, 1);
            pos += 2;
        }
    }
    CHECK(WriteCommand(IT8951_TCON_LD_IMG_END));

    EndSPI();

    return M5EPD_OK;
}

m5epd_err_t M5EPD_Driver::FillPartGram4bpp(uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t data)
{
    _endian_type = IT8951_LDIMG_B_ENDIAN;
    _pix_bpp = IT8951_4BPP;

    // rounded up to be multiple of 4
    // rounded up to be multiple of 4
    if(_direction)
    {
        x = (x + 3) & 0xFFFC;
    }
    else
    {
        x = (x + 3) & 0xFFFC;
        y = (y + 3) & 0xFFFC;
    }

    if(w & 0x03)
    {
        log_d("Gram width %d not a multiple of 4.", w);
        return M5EPD_NOTMULTIPLE4;
    }

    if(_direction)
    {
        if(x > M5EPD_PANEL_W || y > M5EPD_PANEL_H)
        {
            log_d("Pos (%d, %d) out of bounds.", x, y);
            return M5EPD_OUTOFBOUNDS;
        }
    }
    else
    {
        if(x > M5EPD_PANEL_H || y > M5EPD_PANEL_W)
        {
            log_d("Pos (%d, %d) out of bounds.", x, y);
            return M5EPD_OUTOFBOUNDS;
        }
    }

    // uint64_t length = (w / 2) * h;

    StartSPI();

    CHECK(SetTargetMemoryAddr(_tar_memaddr));
    CHECK(SetArea(x, y, w, h));
    for (uint32_t x = 0; x < ((w * h) >> 2); x++)
    {
        digitalWrite(_pin_cs, 0);
        _epd_spi->write32(data);
        digitalWrite(_pin_cs, 1);
    }
    CHECK(WriteCommand(IT8951_TCON_LD_IMG_END));

    EndSPI();

    return M5EPD_OK;
}

void M5EPD_Driver::WriteGramData(uint16_t data)
{
    digitalWrite(_pin_cs, 0);
    _epd_spi->write32(data);
    // _epd_spi->write16(0x0000);
    // _epd_spi->write16(data);
    digitalWrite(_pin_cs, 1);
}

void M5EPD_Driver::ResetDriver(void)
{
    digitalWrite(_pin_rst, 1);
    digitalWrite(_pin_rst, 0);
    delay(20);
    digitalWrite(_pin_rst, 1);
    delay(100);
}

m5epd_err_t M5EPD_Driver::WaitBusy(uint32_t timeout)
{

    uint32_t start_time = millis();
    while (1)
    {
        if (digitalRead(_pin_busy) == 1)
        {
            return M5EPD_OK;
        }

        if (millis() - start_time > timeout)
        {
            log_e("Device response timeout.");
            return M5EPD_BUSYTIMEOUT;
        }
    }
}

m5epd_err_t M5EPD_Driver::WriteCommand(uint16_t cmd)
{
    CHECK(WaitBusy());
    digitalWrite(_pin_cs, 0);
    _epd_spi->write16(0x6000);
    CHECK(WaitBusy());
    _epd_spi->write16(cmd);
    digitalWrite(_pin_cs, 1);

    return M5EPD_OK;
}

m5epd_err_t M5EPD_Driver::WriteWord(uint16_t data)
{
    CHECK(WaitBusy());
    digitalWrite(_pin_cs, 0);
    _epd_spi->write16(0x0000);
    CHECK(WaitBusy());
    _epd_spi->write16(data);
    digitalWrite(_pin_cs, 1);

    return M5EPD_OK;
}

m5epd_err_t M5EPD_Driver::ReadWords(uint16_t *buf, uint32_t length)
{
    // uint16_t dummy;
    CHECK(WaitBusy());
    digitalWrite(_pin_cs, 0);
    _epd_spi->write16(0x1000);
    CHECK(WaitBusy());

    //dummy
    _epd_spi->transfer16(0);
    CHECK(WaitBusy());

    for (size_t i = 0; i < length; i++)
    {
        buf[i] = _epd_spi->transfer16(0);
    }

    digitalWrite(_pin_cs, 1);
    return M5EPD_OK;
}
